tests/fail/test-dup_vars-NEW.c
#include <stdio.h>

void foo(int x, char *y){
char *z = "yo";
printf("%d\n", x);
}
int main(){
int x;
printf("%d\n", x);
return 0;
}

